# simple-crud

./: .env  .env.example  .gitignore  CMakeLists.txt  Readme.md  crud  crud.cpp  crud_data_mahasiswa.cpp  docker-compose.yml
